# automl-exam-fittingroom

./: .gitignore  README.md  download-datasets.py  download-exam-dataset.py  oneclick.py  pyproject.toml  run.py
notebooks/: playground.py
scripts/: experiment.py  print_experiments.py  print_r2_tables.py  run_all_tasks.py  visualize_bo.py
src/: test_bo.ipynb
src/fittingroom/: __init__.py  automl.py  bo_tabpfn.py  data.py  fittingroom.py  hpo.py  meta_learning.py  model_space.py  pipeline.py  utils.py
