[project]
name = "fittingroom"
version = "0.1.0"
description = "AutoML SS25 Exam - Tabular"
readme = "README.md"
authors = [
  { name = "Kürşat Kaya" },
  { name = "Salih Bora Öztürk", email = "borawhocodess@gmail.com" },
  { name = "Zeynep Türkmen" }
]
license = { file = "LICENSE" }

requires-python = ">=3.10"

dependencies = [
  "scikit-learn",
  "openml",
  "pandas",
  "numpy<2.0",
  "IPython"
]

classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
]

[tool.setuptools.packages.find]
where = ["src"]
